Remove deprecated APIs